--- a/config/simple_demo.yaml
+++ b/config/simple_demo.yaml
@@ -3,10 +3,10 @@ grid_map_visualizations:
   - name: elevation_points
     type: point_cloud
     params:
-     layer: global_map
+     layer: global_map_boundary
   - name: elevation_grid
     type: occupancy_grid
     params:
-     layer: global_map
+     layer: global_map_boundary
      data_min: 0
      data_max: 255
